# paleobiodb-geo-locator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
app/: main.py
app/config/: config.py  config_example.toml  config_paths.py
app/models/: paleobiodb_record.py
app/services/: paleobiodb_dataset.py  paleobiodb_email_sender.py
app/utils/: files_utils.py  logging_utils.py  requests_utils.py
data/: example.csv
scripts/: email_check.py  email_ckeck.py
tests/: conftest.py  test_config_parsing.py  test_create_csv.py  test_csv_loader.py  test_fetch_api_data.py  test_models.py
